
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int device_t ;


 int BHND_DEVICE_ORDER_ATTACH ;
 int bhnd_bus_free_children (int *) ;
 int bhnd_bus_get_children (int ,int **,int*,int ) ;
 int device_probe_and_attach (int ) ;

int
bhnd_bus_probe_children(device_t bus)
{
 device_t *devs;
 int ndevs;
 int error;


 error = bhnd_bus_get_children(bus, &devs, &ndevs,
     BHND_DEVICE_ORDER_ATTACH);
 if (error)
  return (error);


 for (int i = 0; i < ndevs; i++) {
  device_t child = devs[i];
  device_probe_and_attach(child);
 }

 bhnd_bus_free_children(devs);

 return (0);
}
